--- a/vae1.ipynb
+++ b/vae1.ipynb
@@ -34,8 +34,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "8e36e1a5-a1e2-41a7-b310-adb7a879cf0c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tmp = pd.read_csv('csv/'+funds[1]['fund_cd']+'.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5e7861f9-2927-4667-bed2-ced56e830882",
    "metadata": {},
    "outputs": [],
    "source": []
