--- a/vae1.ipynb
+++ b/vae1.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 39,
    "id": "3e70594c-cd92-4165-9fc4-89bc12bc7cec",
    "metadata": {},
    "outputs": [],
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 40,
    "id": "105960b2-8f2c-46e5-a553-68e8245827bb",
    "metadata": {},
    "outputs": [],
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 41,
    "id": "34c03178-662b-4372-826d-d180f244b2c7",
    "metadata": {},
    "outputs": [],
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 42,
    "id": "7c7fd784-6223-4848-8030-cb05fc00df46",
    "metadata": {},
    "outputs": [],
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 43,
    "id": "6ba2b775-ada5-4c3b-8042-41419df567e3",
    "metadata": {},
    "outputs": [],
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 44,
    "id": "2aae392d-a37f-468f-acca-da4cf215b4a9",
    "metadata": {},
    "outputs": [],
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 45,
    "id": "a775059e-bd6c-4dc7-a114-b16c836535fb",
    "metadata": {},
    "outputs": [],
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 46,
    "id": "194e52fd-285c-4754-8d71-c1defbacd4bc",
    "metadata": {},
    "outputs": [],
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 47,
    "id": "2afc3fae-7348-48bb-8766-2d3b7820cb77",
    "metadata": {},
    "outputs": [],
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 48,
    "id": "508e650d-b0fb-4b8b-a9c6-38492848d6b3",
    "metadata": {},
    "outputs": [
@@ -142,7 +142,7 @@
        "False"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,18 +153,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 49,
    "id": "2cf94f9e-f194-4357-ae7c-9b76836e6b0f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "nums_rebq = nums_noreb\n",
-    "vals_rebq = val_noreb"
+    "nums_rebq = nums_noreb.copy()\n",
+    "vals_rebq = val_noreb.copy()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 50,
    "id": "327527db-16f0-44f4-821c-ff9e4d51035d",
    "metadata": {},
    "outputs": [
@@ -182,7 +182,7 @@
        "Name: 3, dtype: float64"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 51,
    "id": "2a321e1e-af94-4a57-a366-fb2d2377a9f8",
    "metadata": {},
    "outputs": [
@@ -203,7 +203,7 @@
        "123300.0"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 52,
    "id": "7486466c-b68b-4524-b6cb-ece4d3b8e2e8",
    "metadata": {},
    "outputs": [],
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 53,
    "id": "dcdf665b-6ee6-4e8d-8fad-042caf051b85",
    "metadata": {},
    "outputs": [],
@@ -243,17 +243,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 54,
    "id": "1f906013-bbda-46a8-b60c-8ea91c4cea62",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f4286f9dd90>]"
+       "[<matplotlib.lines.Line2D at 0x7f428b0f4a00>]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     },
