--- a/vae1.ipynb
+++ b/vae1.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "id": "105960b2-8f2c-46e5-a553-68e8245827bb",
    "metadata": {},
    "outputs": [],
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
    "id": "414c94b5-07e4-415a-a973-ef50ebbf5d39",
    "metadata": {},
    "outputs": [],
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 6,
    "id": "56ba1782-6fda-4f52-9b69-911fc0424257",
    "metadata": {},
    "outputs": [],
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "2afc3fae-7348-48bb-8766-2d3b7820cb77",
    "metadata": {},
    "outputs": [],
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "508e650d-b0fb-4b8b-a9c6-38492848d6b3",
    "metadata": {},
    "outputs": [
@@ -109,7 +109,7 @@
        "False"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "id": "2cf94f9e-f194-4357-ae7c-9b76836e6b0f",
    "metadata": {},
    "outputs": [],
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "id": "327527db-16f0-44f4-821c-ff9e4d51035d",
    "metadata": {},
    "outputs": [
@@ -149,7 +149,7 @@
        "Name: 3, dtype: float64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -160,17 +160,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "id": "2a321e1e-af94-4a57-a366-fb2d2377a9f8",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "123300.0"
+       "123252.3343885176"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "id": "7486466c-b68b-4524-b6cb-ece4d3b8e2e8",
    "metadata": {},
    "outputs": [],
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "id": "dcdf665b-6ee6-4e8d-8fad-042caf051b85",
    "metadata": {},
    "outputs": [],
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 14,
    "id": "d4e1bd52-9956-4af0-89bb-d316b785b0eb",
    "metadata": {},
    "outputs": [],
@@ -219,6 +219,33 @@
     "alc_rebq = vals_rebq.copy()\n",
     "for index, row in alc_rebq.iterrows():\n",
     "    alc_rebq.loc[index] = vals_rebq.loc[index]/port_rebq.loc[index]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "3b02bf98-8ccb-408e-9930-bae49a755d02",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 上下限抵触によるリバランス\n",
+    "vals_rebv = pd.DataFrame(columns=vals_rebq.columns,index=vals_rebq.index)\n",
+    "nums_rebv = pd.DataFrame(columns=vals_rebq.columns,index=vals_rebq.index)\n",
+    "alc_rebv = pd.DataFrame(columns=vals_rebq.columns,index=vals_rebq.index)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6d11d38f-38af-4d2e-95d3-2b37252981a7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for index, row in vals_rebv.iterrows():\n",
+    "    if index == 0:\n",
+    "        vals_rebv.loc[index] = vals_rebq.loc[index]\n",
+    "        nums_rebv.loc[index] = nums_rebq.loc[index]\n",
+    "        alc_rebv.loc[index] = "
    ]
   },
   {
@@ -331,7 +358,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
