--- a/vaeport.ipynb
+++ b/vaeport.ipynb
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 27,
    "id": "2fdb4801-eb44-46e1-aa5f-141d7d405e97",
    "metadata": {},
    "outputs": [],
@@ -469,26 +469,26 @@
     "funds_valid= fundsdata.query('date >= 20200101 and date < 20230101')\n",
     "valid_dif = funds_valid[ ['jp_stock','foreign_stock','emerging_stock','jp_bond','foreign_bond','emerging_bond','jp_reit','foreign_reit'] ]\n",
     "valid_dif.reset_index(inplace=True, drop=True)\n",
-    "funds_dif = np.log(funds_dif)-np.log(funds_dif.shift(1))\n",
+    "valid_dif = np.log(valid_dif)-np.log(valid_dif.shift(1))\n",
     "valid_dif = valid_dif.loc[1:]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 51,
    "id": "7b20349c-4b5c-48c9-bfc6-89c5bb1243d6",
    "metadata": {},
    "outputs": [],
    "source": [
     "# ウィンドウ区間の変化率をndarrayに変換\n",
     "vlist = []\n",
-    "for i in range(len(valid_dif.index) - w):\n",
+    "for i in range(len(valid_dif.index) - w + 1):\n",
     "    vlist.append(valid_dif.loc[i+1:i+w].values)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 52,
    "id": "b60ccdf5-a6c6-4601-a4d7-5c2ef388a86e",
    "metadata": {},
    "outputs": [],
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 53,
    "id": "820d96f6-95df-4dbd-81e8-2998ba4a9c9e",
    "metadata": {},
    "outputs": [
@@ -506,8 +506,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "22/22 [==============================] - 0s 5ms/step\n",
-      "22/22 [==============================] - 0s 10ms/step\n"
+      "22/22 [==============================] - 1s 8ms/step\n",
+      "22/22 [==============================] - 0s 17ms/step\n"
      ]
     }
    ],
@@ -518,315 +518,148 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 54,
    "id": "ac21af02-7715-487d-8449-74c1749ecd81",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[[5.00598981e-04],\n",
-       "        [5.63979789e-04],\n",
-       "        [1.37015173e-04],\n",
-       "        [4.00620454e-04],\n",
-       "        [7.10511740e-05],\n",
-       "        [2.15730033e-04],\n",
-       "        [2.67692289e-04],\n",
-       "        [5.17231587e-04]],\n",
-       "\n",
-       "       [[3.66063789e-04],\n",
-       "        [4.26375307e-04],\n",
-       "        [1.16081952e-04],\n",
-       "        [2.71673693e-04],\n",
-       "        [6.52438321e-05],\n",
-       "        [1.66997168e-04],\n",
-       "        [2.19800771e-04],\n",
-       "        [3.42603918e-04]],\n",
-       "\n",
-       "       [[1.56937167e-04],\n",
-       "        [2.17987515e-04],\n",
-       "        [8.50604192e-05],\n",
-       "        [1.24434620e-04],\n",
-       "        [4.90426901e-05],\n",
-       "        [8.25574461e-05],\n",
-       "        [2.51764635e-04],\n",
-       "        [1.57658142e-04]],\n",
-       "\n",
-       "       [[1.23721169e-04],\n",
-       "        [1.32229979e-04],\n",
-       "        [6.34893076e-05],\n",
-       "        [7.41406911e-05],\n",
-       "        [3.34599099e-05],\n",
-       "        [4.25461585e-05],\n",
-       "        [1.74086905e-04],\n",
-       "        [9.38473313e-05]],\n",
-       "\n",
-       "       [[1.65169986e-04],\n",
-       "        [1.12851711e-04],\n",
-       "        [7.54625653e-05],\n",
-       "        [8.34447783e-05],\n",
-       "        [7.40485630e-05],\n",
-       "        [5.55735533e-05],\n",
-       "        [3.10787931e-04],\n",
-       "        [1.00973455e-04]],\n",
-       "\n",
-       "       [[1.79101553e-04],\n",
-       "        [1.81694224e-04],\n",
-       "        [9.14108896e-05],\n",
-       "        [9.48846791e-05],\n",
-       "        [7.52125488e-05],\n",
-       "        [6.64889521e-05],\n",
-       "        [2.84623762e-04],\n",
-       "        [1.13574693e-04]],\n",
-       "\n",
-       "       [[1.76739588e-04],\n",
-       "        [1.55591988e-04],\n",
-       "        [7.07416766e-05],\n",
-       "        [7.87779863e-05],\n",
-       "        [5.19931564e-05],\n",
-       "        [6.24390523e-05],\n",
-       "        [2.39506160e-04],\n",
-       "        [9.48848610e-05]],\n",
-       "\n",
-       "       [[1.29796448e-04],\n",
-       "        [1.65420905e-04],\n",
-       "        [7.08443549e-05],\n",
-       "        [7.08711013e-05],\n",
-       "        [4.87104953e-05],\n",
-       "        [6.38804704e-05],\n",
-       "        [2.12818530e-04],\n",
-       "        [8.51484001e-05]],\n",
-       "\n",
-       "       [[1.56439623e-04],\n",
-       "        [1.41317389e-04],\n",
-       "        [6.71020389e-05],\n",
-       "        [9.67490050e-05],\n",
-       "        [6.62960447e-05],\n",
-       "        [7.31118489e-05],\n",
-       "        [2.77608517e-04],\n",
-       "        [1.14694485e-04]],\n",
-       "\n",
-       "       [[1.77029680e-04],\n",
-       "        [1.88375416e-04],\n",
-       "        [8.60566797e-05],\n",
-       "        [1.03736827e-04],\n",
-       "        [7.36206784e-05],\n",
-       "        [7.48617895e-05],\n",
-       "        [2.56537372e-04],\n",
-       "        [1.22064317e-04]],\n",
-       "\n",
-       "       [[1.84309654e-04],\n",
-       "        [1.68664337e-04],\n",
-       "        [7.46391743e-05],\n",
-       "        [8.74632024e-05],\n",
-       "        [5.50817640e-05],\n",
-       "        [6.87356660e-05],\n",
-       "        [2.45807139e-04],\n",
-       "        [1.03249411e-04]],\n",
-       "\n",
-       "       [[1.36320712e-04],\n",
-       "        [1.70753716e-04],\n",
-       "        [7.47584927e-05],\n",
-       "        [7.70569241e-05],\n",
-       "        [5.04836644e-05],\n",
-       "        [6.65418629e-05],\n",
-       "        [2.16942499e-04],\n",
-       "        [9.12382893e-05]],\n",
-       "\n",
-       "       [[1.52339519e-04],\n",
-       "        [1.34555186e-04],\n",
-       "        [6.55621625e-05],\n",
-       "        [9.34892450e-05],\n",
-       "        [6.42612431e-05],\n",
-       "        [7.05751663e-05],\n",
-       "        [2.70202872e-04],\n",
-       "        [1.11239060e-04]],\n",
-       "\n",
-       "       [[1.72227999e-04],\n",
-       "        [1.83338270e-04],\n",
-       "        [8.39367931e-05],\n",
-       "        [1.00614277e-04],\n",
-       "        [7.15017377e-05],\n",
-       "        [7.23331395e-05],\n",
-       "        [2.51573161e-04],\n",
-       "        [1.18826152e-04]],\n",
-       "\n",
-       "       [[1.78788629e-04],\n",
-       "        [1.64014127e-04],\n",
-       "        [7.28625455e-05],\n",
-       "        [8.50188299e-05],\n",
-       "        [5.33731145e-05],\n",
-       "        [6.64677791e-05],\n",
-       "        [2.42300768e-04],\n",
-       "        [1.00675301e-04]],\n",
-       "\n",
-       "       [[1.33545909e-04],\n",
-       "        [1.66754355e-04],\n",
-       "        [7.31066248e-05],\n",
-       "        [7.50356849e-05],\n",
-       "        [4.90306702e-05],\n",
-       "        [6.44611428e-05],\n",
-       "        [2.13183899e-04],\n",
-       "        [8.90508600e-05]],\n",
-       "\n",
-       "       [[1.54055902e-04],\n",
-       "        [1.35577793e-04],\n",
-       "        [6.65045591e-05],\n",
-       "        [9.41466133e-05],\n",
-       "        [6.48209461e-05],\n",
-       "        [7.07012077e-05],\n",
-       "        [2.72817095e-04],\n",
-       "        [1.11113113e-04]],\n",
-       "\n",
-       "       [[1.73877401e-04],\n",
-       "        [1.84642617e-04],\n",
-       "        [8.49062926e-05],\n",
-       "        [1.01208083e-04],\n",
-       "        [7.20015014e-05],\n",
-       "        [7.24036727e-05],\n",
-       "        [2.53376842e-04],\n",
-       "        [1.18576347e-04]],\n",
-       "\n",
-       "       [[1.80105097e-04],\n",
-       "        [1.64699435e-04],\n",
-       "        [7.31971668e-05],\n",
-       "        [8.54074824e-05],\n",
-       "        [5.34401916e-05],\n",
-       "        [6.65050029e-05],\n",
-       "        [2.41757560e-04],\n",
-       "        [1.00325604e-04]],\n",
-       "\n",
-       "       [[1.34238144e-04],\n",
-       "        [1.67841645e-04],\n",
-       "        [7.33885245e-05],\n",
-       "        [7.54436478e-05],\n",
-       "        [4.91644350e-05],\n",
-       "        [6.47024935e-05],\n",
-       "        [2.12839237e-04],\n",
-       "        [8.88396753e-05]],\n",
-       "\n",
-       "       [[1.54874841e-04],\n",
-       "        [1.36587201e-04],\n",
-       "        [6.67619606e-05],\n",
-       "        [9.49143578e-05],\n",
-       "        [6.50692964e-05],\n",
-       "        [7.12514011e-05],\n",
-       "        [2.73325568e-04],\n",
-       "        [1.11649679e-04]],\n",
-       "\n",
-       "       [[1.74688015e-04],\n",
-       "        [1.85640543e-04],\n",
-       "        [8.51868899e-05],\n",
-       "        [1.01983111e-04],\n",
-       "        [7.22931436e-05],\n",
-       "        [7.29634921e-05],\n",
-       "        [2.53693026e-04],\n",
-       "        [1.19104086e-04]],\n",
-       "\n",
-       "       [[1.81896161e-04],\n",
-       "        [1.66841346e-04],\n",
-       "        [7.40530813e-05],\n",
-       "        [8.57846608e-05],\n",
-       "        [5.42805174e-05],\n",
-       "        [6.70137306e-05],\n",
-       "        [2.44412193e-04],\n",
-       "        [1.00536876e-04]],\n",
-       "\n",
-       "       [[1.33607420e-04],\n",
-       "        [1.68004466e-04],\n",
-       "        [7.43779237e-05],\n",
-       "        [7.53684290e-05],\n",
-       "        [4.95871718e-05],\n",
-       "        [6.45590117e-05],\n",
-       "        [2.16399363e-04],\n",
-       "        [8.85727932e-05]],\n",
-       "\n",
-       "       [[1.43429919e-04],\n",
-       "        [1.26909130e-04],\n",
-       "        [6.21038926e-05],\n",
-       "        [8.73236131e-05],\n",
-       "        [5.97666403e-05],\n",
-       "        [6.48128480e-05],\n",
-       "        [2.58080720e-04],\n",
-       "        [1.03295984e-04]],\n",
-       "\n",
-       "       [[1.63798133e-04],\n",
-       "        [1.74533357e-04],\n",
-       "        [8.05574600e-05],\n",
-       "        [9.44395724e-05],\n",
-       "        [6.72298193e-05],\n",
-       "        [6.68521170e-05],\n",
-       "        [2.42778988e-04],\n",
-       "        [1.10914829e-04]],\n",
-       "\n",
-       "       [[1.73875247e-04],\n",
-       "        [1.62270022e-04],\n",
-       "        [7.30753236e-05],\n",
-       "        [7.70776460e-05],\n",
-       "        [5.35126055e-05],\n",
-       "        [6.10225834e-05],\n",
-       "        [2.48892000e-04],\n",
-       "        [9.12156756e-05]],\n",
-       "\n",
-       "       [[1.17481148e-04],\n",
-       "        [1.52674707e-04],\n",
-       "        [7.44405770e-05],\n",
-       "        [6.56627089e-05],\n",
-       "        [4.73126383e-05],\n",
-       "        [5.59640721e-05],\n",
-       "        [2.26319331e-04],\n",
-       "        [7.82380666e-05]],\n",
-       "\n",
-       "       [[8.02903305e-05],\n",
-       "        [7.19990348e-05],\n",
-       "        [3.66307759e-05],\n",
-       "        [4.66914462e-05],\n",
-       "        [3.46862471e-05],\n",
-       "        [3.43838838e-05],\n",
-       "        [1.83741111e-04],\n",
-       "        [6.15049721e-05]],\n",
-       "\n",
-       "       [[1.02271377e-04],\n",
-       "        [1.07050466e-04],\n",
-       "        [5.36743137e-05],\n",
-       "        [5.28366727e-05],\n",
-       "        [4.21185687e-05],\n",
-       "        [3.67143184e-05],\n",
-       "        [1.85645855e-04],\n",
-       "        [6.86288404e-05]],\n",
-       "\n",
-       "       [[2.99050473e-04],\n",
-       "        [4.52492444e-04],\n",
-       "        [1.29804379e-04],\n",
-       "        [3.10121715e-04],\n",
-       "        [8.87106580e-05],\n",
-       "        [2.15813154e-04],\n",
-       "        [3.88382963e-04],\n",
-       "        [3.88064451e-04]],\n",
-       "\n",
-       "       [[5.80854714e-04],\n",
-       "        [8.81633488e-04],\n",
-       "        [1.73193679e-04],\n",
-       "        [4.00462159e-04],\n",
-       "        [1.26424056e-04],\n",
-       "        [3.61465995e-04],\n",
-       "        [3.74401745e-04],\n",
-       "        [4.99655260e-04]]], dtype=float32)"
+       "array([[3.66568100e-04],\n",
+       "       [4.26957326e-04],\n",
+       "       [1.16234914e-04],\n",
+       "       [2.72120902e-04],\n",
+       "       [6.53656462e-05],\n",
+       "       [1.67356469e-04],\n",
+       "       [2.20115558e-04],\n",
+       "       [3.43277236e-04]], dtype=float32)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "x_decode[230,:,:,:]"
+    "x_decode[230,1,:,:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "ca941e7a-df47-4a8b-854c-d869bfdbff4b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.00267926],\n",
+       "       [ 0.00596847],\n",
+       "       [-0.00170748],\n",
+       "       [-0.00058717],\n",
+       "       [-0.00438796],\n",
+       "       [ 0.00049221],\n",
+       "       [ 0.00941467],\n",
+       "       [ 0.01573646]])"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x_input[230,1,:,:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "572d73a8-b4be-46db-9776-b664dfcb885a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_input=x_input.squeeze()\n",
+    "x_decode=x_decode.squeeze()\n",
+    "\n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "db1329a3-b374-4c87-a5f4-52cf258a46af",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.021767115092859876\n"
+     ]
+    }
+   ],
+   "source": [
+    "x_1=x_input[1,:,:].squeeze()\n",
+    "x_2=x_decode[1,:,:].squeeze()\n",
+    "n_dif=np.sum((x_1-x_2)**2).sum()\n",
+    "print(n_dif)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "5f07ea95-2e0a-472e-84a8-d613c3d3e2ea",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_24567/530998421.py:2: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  difs['dif'] = 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "difs = funds_valid[['date']]\n",
+    "difs['dif'] = 0\n",
+    "difs.reset_index(inplace=True, drop=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "313cab72-98de-4017-ba63-e048e016021b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(len(x_input)):\n",
+    "    vi = x_input[i,:,:].squeeze()\n",
+    "    vd = x_decode[i,:,:].squeeze()\n",
+    "    d = np.sum((vi-vd)**2).sum()\n",
+    "    difs.iloc[w+i,1] = d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "d74f5ae0-466f-46c2-bfa3-6ff0c4a19968",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "difs.to_csv('difs.csv')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ca941e7a-df47-4a8b-854c-d869bfdbff4b",
+   "id": "5e980d59-1caf-4d0b-a303-c9125a693345",
    "metadata": {},
    "outputs": [],
    "source": []
